# gps-logger

./: .gitignore  CMakeLists.txt  README.md  build.sh  claude.md  flash-monitor.sh  flash.sh  monitor.sh  planning  planning2  sdkconfig
main/: CMakeLists.txt  main.c  pin_config.h  system_manager.c  system_manager.h
main/communication/: gps_driver.c  gps_driver.h  gps_manager.c  gps_manager.h  i2c_bus.c  i2c_bus.h  nmea_parser.c  nmea_parser.h
main/display/: display_manager.c  display_manager.h  screen_gps.c  screen_gps.h  screen_ranging.c  screen_ranging.h  screen_status.c  screen_status.h  ssd1306_driver.c  ssd1306_driver.h
main/gps/: distance_calc.c  distance_calc.h
main/input/: button_handler.c  button_handler.h
main/power/: battery_monitor.c  battery_monitor.h  ina226_driver.c  ina226_driver.h  power_manager.c  power_manager.h  power_modes.c  power_modes.h
main/storage/: sd_logger.c  sd_logger.h
main/wireless/: ble_scanner.c  ble_scanner.h  espnow_manager.c  espnow_manager.h  lora_manager.c  lora_manager.h  protocol_types.h  wifi_scanner.c  wifi_scanner.h
